--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "express-jwt": "^0.3.2",
+    "http": "0.0.0",
     "jsonwebtoken": "^1.3.0",
     "lodash": "^2.4.2",
     "morgan": "^1.7.0",
