--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,24 @@
     "configurations": [{
             "type": "node",
             "request": "launch",
+            "name": "Launch set-admin-password",
+            "program": "${workspaceRoot}\\command.js",
+            "cwd": "${workspaceRoot}",
+            "args": ["set-admin-password", "snowsnake"],
+            "outFiles": [],
+            "sourceMaps": true
+        },
+        {
+            "type": "node",
+            "request": "attach",
+            "name": "Attach to Process",
+            "port": 5858,
+            "outFiles": [],
+            "sourceMaps": true
+        },
+        {
+            "type": "node",
+            "request": "launch",
             "name": "Launch Program",
             "program": "${workspaceRoot}\\test.js",
             "cwd": "${workspaceRoot}",
