--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,8 +24,8 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceRoot}\\test.js",
+            "name": "server.js",
+            "program": "${workspaceRoot}\\server.js",
             "cwd": "${workspaceRoot}",
             "outFiles": [],
             "sourceMaps": true
