changed login log and try with getdataall security

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "name": "Launch set-admin-password",
             "program": "${workspaceRoot}\\command.js",
             "cwd": "${workspaceRoot}",
-            "args": ["set-admin-password", "snowsnake"],
+            "args": ["set-admin-password", "nutbrain"],
             "outFiles": [],
             "sourceMaps": true
         },
