--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cors": "^2.7.1",
     "cradle": "^0.7.1",
     "dotenv": "^0.4.0",
+    "emailjs": "^1.0.8",
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "express-jwt": "^0.3.2",
