--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Chuck Norris Quotes API",
   "main": "server.js",
   "scripts": {
+    "grunt": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -30,6 +31,11 @@
     "errorhandler": "^1.4.3",
     "express": "^4.13.4",
     "express-jwt": "^0.3.2",
+    "grunt": "^1.0.1",
+    "grunt-cli": "^1.2.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-ts": "^6.0.0-beta.11",
+    "grunt-tslint": "^4.0.0",
     "http": "0.0.0",
     "jsonwebtoken": "^1.3.0",
     "lodash": "^2.4.2",
@@ -37,6 +43,12 @@
     "node-json-db": "^0.7.3",
     "pg": "^6.1.0",
     "request": "^2.79.0",
-    "tingodb": "^0.4.2"
+    "tingodb": "^0.4.2",
+    "tsconfig": "^5.0.3",
+    "tslint": "^4.4.2",
+    "typescript": "^2.1.5"
+  },
+  "devDependencies": {
+    "@types/node": "^7.0.4"
   }
 }
