--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "ES6",
-        "module": "es6",
+        "target": "es2015",
+        "module": "commonjs",
         "noEmitOnError": true,
         "noImplicitAny": true,
         "experimentalDecorators": true,
