--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "grunt": "grunt",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-
   "repository": {
     "type": "git",
     "url": "https://github.com/auth0/angular2-authentication-sample"
@@ -30,8 +29,6 @@
     "dotenv": "^0.4.0",
     "emailjs": "^1.0.8",
     "errorhandler": "^1.4.3",
-    "es6": "0.0.7",
-    "es6-module-loader": "^0.17.11",
     "express": "^4.13.4",
     "express-jwt": "^0.3.2",
     "grunt": "^1.0.1",
@@ -45,14 +42,15 @@
     "morgan": "^1.7.0",
     "node-json-db": "^0.7.3",
     "object-assign": "^4.1.1",
-    "pg": "^6.1.0",
     "request": "^2.79.0",
-    "tingodb": "^0.4.2",
+    "tsc": "^1.20150623.0",
     "tsconfig": "^5.0.3",
     "tslint": "^4.4.2",
     "typescript": "^2.1.5"
   },
   "devDependencies": {
-    "@types/node": "^7.0.4"
+    "@types/node": "^7.0.4",
+    "es6": "0.0.7",
+    "es6-module-loader": "^0.17.11"
   }
 }
